--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^6.8.0",
     "jest": "^25.3.0",
     "metro-react-native-babel-preset": "^0.59.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.11.0",
     "typescript": "^3.8.3"
   },
